// Copyright 2025 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.securecomputation.impressions;

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

option java_package = "org.wfanet.measurement.securecomputation.impressions";
option java_outer_classname = "LabeledImpressionProto";

message LabeledImpression {
  google.protobuf.Timestamp impression_time = 1;

  int64 vid = 2;

  // Map of message type URL to converted impression to event template message.
  map<string, google.protobuf.Any> event_template_map = 3;
}
